--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -1,10 +1,10 @@
-Changes to squid-2.5.STABLE8 ()
+Changes to squid-2.5.STABLE8 (11 Feb 2005)
 
 	- [Minor] 100% CPU usage on half-closed PUT/POST requests (Bug #354,
 	  #1096)
 	- [Cosmetic] Document -v (protocol version) option to LDAP helpers
 	- [Minor] The new req_header and resp_header acls segfaults
-	  immediately on parse of squid.conf
+	  immediately on parse of squid.conf (Bug #961)
 	- [Minor] Failure to shut down busy helpers on -k rotate/reconfigure
 	  (Bug #1118)
 	- [Minor] Don't use O_NONBLOCK on disk files. (Bug #1102)
@@ -13,6 +13,7 @@ Changes to squid-2.5.STABLE8 ()
 	- [Minor security] Random error messages in response to malformed
 	  host name (Bug #1143)
 	- [Minor] PURGE should not be able to delete internal objects
+	  (Bug #1112)
 	- [Minor] httpd_accel_port 0 (virtual) not working correctly (Bug
 	  #1121)
 	- [Minor] cachemgr vm_objects segfault (Bug #1149)
@@ -44,7 +45,8 @@ Changes to squid-2.5.STABLE8 ()
 	- [Major] Segmentation fault on failed PUT/POST requests (Bug #1224)
 	- [Medium] Persistent connection mismatch on failed PUT/POST request
 	  (Bug #1122)
-	- [Minor] WCCP easily disturbed by forged packets
+	- [Minor] WCCP easily disturbed by forged packets (Bug #1225)
+	- [Minor] Password management in ftp:// gatewaying improved (Bug #1226)
 	- [Major] HTTP reply data corruption in certain situations involving
 	  reply headers split over multiple packets (Bug #1233)
 
