--- a/helpers/external_acl/ldap_group/squid_ldap_group.8
+++ b/helpers/external_acl/ldap_group/squid_ldap_group.8
@@ -1,4 +1,4 @@
-.TH squid_ldap_group 8 "30 January 2005" "Squid LDAP Group"
+.TH squid_ldap_group 8 "30 January 2005" "Version 2.17-2.5"
 .
 .SH NAME
 squid_ldap_group - Squid LDAP external acl group helper
