--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,8 @@ Changes to squid-2.5.STABLE10 (not yet released)
 	- [Minor Security] Fix for CVE-1999-0710: cachemgr malicouse use.
 	  cachemgr.cgi now reads a config file telling which proxy servers
 	  it can administer.
+	- [Minor] aufs statistics improvements
+	- [Minor] SNMP bugfixes and support for SNMPv2(c) (Bug #1288, #1299)
 	
 Changes to squid-2.5.STABLE9 (24 Feb 2005)
 
