--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -57,6 +57,7 @@ Changes to squid-2.5.STABLE10 (not yet released)
 	  it can administer.
 	- [Minor] aufs statistics improvements
 	- [Minor] SNMP bugfixes and support for SNMPv2(c) (Bug #1288, #1299)
+	- [Minor] Romanian error pages updated
 	
 Changes to squid-2.5.STABLE9 (24 Feb 2005)
 
