--- a/branches/SQUID_2_5/ChangeLog
+++ b/branches/SQUID_2_5/ChangeLog
@@ -1,4 +1,4 @@
-Changes to squid-2.5.STABLE10 (not yet released)
+Changes to squid-2.5.STABLE10 (17 May 2005)
 
 	- [Minor Security] Fix race condition in relation to old Netscape
 	  Set-Cookie specifications
