follow-x-forwarded-for, optional support for determining the client ip by parsing the X-Forwarded-For header. Useful in cache hierarchies.
Import of the follow_xff-2_6 branch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,8 @@ Changes to squid-2.6 (not yet released)
 	  log files from local users
 	- HTCP support for access control and the CRL operation for
 	  purgeing of cache content
+	- Optionally follow X-Forwarded-For headers to determine the original
+	  client IP behind sedond level proxies
 
 Changes to squid-2.5.STABLE14 (20 May 2006)
 	- [Minor] icons not displayed when visible_hostname is a
